--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Relaxer</title>
+    <title>Breathe And Relax</title>
 </head>
 
 <body>
-    <h1>Relaxer</h1>
+    <h1>Breathe</h1>
 
     <div class="container" id="container">
         <div class="circle"></div>
